unpackaged/main/default/objects/LinkShorteningAPI__c/LinkShorteningAPI__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>LSA is responsible for setting endpoint values for WS to shorten application links or other links.</description>
    <label>LinkShorteningAPI</label>
</CustomObject>