unpackaged/main/default/objects/LinkShorteningAPI__c/fields/Authorization__c.field-meta.xml
<CustomField>
    <fullName>Authorization__c</fullName>
    <label>Authorization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>