unpackaged/main/default/objects/LinkShorteningAPI__c/fields/Retrieval_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Retrieval_Endpoint__c</fullName>
    <label>Retrieval Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>