unpackaged/main/default/objects/LinkShorteningAPI__c/fields/Service_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Service_Endpoint__c</fullName>
    <label>Service Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>